--- a/gradesystem/src/App.css
+++ b/gradesystem/src/App.css
@@ -173,16 +173,19 @@ label {
 .gradeTable tbody tr td:nth-child(4) {
   text-align: left;
 }
-td:not(:nth-child(4)) input::placeholder {
+.gradeTable tbody tr td:not(:nth-child(4)) input {
   text-align: center;
 }
-td:not(:nth-child(4)) input:-ms-input-placeholder {
+.gradeTable tbody tr td:not(:nth-child(4)) input::placeholder {
   text-align: center;
 }
-td:not(:nth-child(4)) input::-webkit-input-placeholder {
+.gradeTable tbody tr td:not(:nth-child(4)) input:-ms-input-placeholder {
   text-align: center;
 }
-td:not(:nth-child(4)) input::-moz-placeholder {
+.gradeTable tbody tr td:not(:nth-child(4)) input::-webkit-input-placeholder {
+  text-align: center;
+}
+.gradeTable tbody tr td:not(:nth-child(4)) input::-moz-placeholder {
   text-align: center;
 }
 .gradeTable tbody tr:last-child td {
